tests/export_star_excludes_default/export_star_excludes_default.exp
Error -------------------------------------------------------------------------------------------------- consumer.js:5:8

Cannot import a default export because there is no default export in `./barrel`. [missing-export]

   5| import DefaultThroughStar from './barrel';
             ^^^^^^^^^^^^^^^^^^



Found 1 error
